--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	.modify_this{
 		color: dodgerblue;
 		font-weight: bold;
-		background-color: lightgreen;
+		background-color: white;
 	}
 	.modify_this_too{
 		color: orangered;
